--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 5px;
 </head>
 <body>
   <div class="imgUtama">
-    <img src="image/utama-removebg-preview(1).png">
+    <img src="burger.jpg">
   </div>
 
   
