--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 5px;
 </head>
 <body>
   <div class="imgUtama">
-    <img src="burger.jpg">
+    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/burger.jpeg">
   </div>
 
   
