--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 5px;
 </head>
 <body>
   <div class="imgUtama">
-    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/burger.jpeg">
+    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/utama-removebg-preview(1).png">
   </div>
 
   
@@ -318,7 +318,7 @@ padding: 5px;
     <div class="selogan">
       <p>Satu Gigitan Membuat Ketagihan</p>
     </div>
-    <img src="image/kalimat.png">
+    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/kalimat.png">
     <P class="p1">Dimsum Kekinian Yang Menghadirkan Rasa Baru Yang Belum Pernah Ada Di setiap Gigitan</P>
     <button onclick="openDiskon()">Lihat Diskon</button>
     <button id="lihatListHarga"  onclick="lihatListHargaYa()">Lihat List Harga Menu</button>
