--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 5px;
 </head>
 <body>
   <div class="imgUtama">
-    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/utama-removebg-preview(1).png">
+    <img src="https://raw.githubusercontent.com/ikhwandev1528/DIMSUM/main/burder.jpg">
   </div>
 
   
