--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       width: 400px;
       height: 400px;
       transform: translateX(1000px)translateY(160px);
-
+      filter:drop-shadow(0px 0px 30px black) 
     }
 
 
