--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ position: relative;
 </div>
 
 <div class="baner">
-  <img src="image/baner.png">
+  <img src="https://raw.githubusercontent.com/ikhwaDEV1528/DIMSUM/main/baner.png">
 
 </div>
 
