--- a/index.html
+++ b/index.html
@@ -367,12 +367,32 @@ position: relative;
   width: 100%;
   height: 600px;
   position:relative;
+  filter: drop-shadow(0px 0px 90px rgb(149, 98, 3));
 }
 
 .baner img{
   position: absolute;
   height: 600px;
   width: 101%;
+}
+
+.navbar{
+  background-color:rgb(77, 38, 13);
+  height: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  filter: drop-shadow(0px 0px 90px rgb(28, 14, 5));
+  box-shadow: 0px 0px 90px rgb(20, 1, 1), 0px 0px 10px orange;
+}
+
+.navbar button{
+ width: 100px;
+height: 50px;
+background-color: rgb(227, 227, 168);
+border-radius: 15px;
 }
 
 
@@ -840,6 +860,11 @@ position: relative;
 <div class="baner">
   <img src="https://raw.githubusercontent.com/ikhwaDEV1528/DIMSUM/main/baner.png">
 
+</div>
+<div class="navbar">
+  <button onclick="halaman1()">halama1</button>
+  <button onclick="halaman2()">halaman2</button>
+  <button onclick="halaman3()">halaman3</button>
 </div>
 
 <script>
@@ -1358,4 +1383,4 @@ function submit1(){
   
 </script>
 </body>
-</html>
+</html> 
