--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@ position: relative;
 
 .navbar{
   background-color:rgb(77, 38, 13);
-  height: 200px;
-  width: 100%;
+  height: 300px;
+  width: 1483px;
   display: flex;
   justify-content: center;
   align-items: center;
