--- a/index.html
+++ b/index.html
@@ -373,19 +373,21 @@ position: relative;
 .baner img{
   position: absolute;
   height: 600px;
-  width: 1590px;
+  width: 1595px;
+   transform:translateX(-3px)
 }
 
 .navbar{
   background-color:rgb(77, 38, 13);
   height: 200px;
-  width: 1590px;
+  width: 1595px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
   filter: drop-shadow(0px 0px 90px rgb(28, 14, 5));
   box-shadow: 0px 0px 90px rgb(20, 1, 1), 0px 0px 10px orange;
+  transform:translateX(-3px)
 }
 
 .navbar button{
