--- a/index.html
+++ b/index.html
@@ -384,17 +384,19 @@ position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 120px;
   filter: drop-shadow(0px 0px 90px rgb(28, 14, 5));
   box-shadow: 0px 0px 90px rgb(20, 1, 1), 0px 0px 10px orange;
   transform:translateX(-5px)
 }
 
 .navbar button{
- width: 100px;
-height: 50px;
+ width: 220px;
+height: 140px;
 background-color: rgb(227, 227, 168);
 border-radius: 15px;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-size: 28px;
 }
 
 
