--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@ position: relative;
   height: 600px;
   position:relative;
   filter: drop-shadow(0px 0px 90px rgb(149, 98, 3));
+  transform: translateY(150px);
 }
 
 .baner img{
@@ -387,16 +388,16 @@ position: relative;
   gap: 120px;
   filter: drop-shadow(0px 0px 90px rgb(28, 14, 5));
   box-shadow: 0px 0px 90px rgb(20, 1, 1), 0px 0px 10px orange;
-  transform:translateX(-5px)
+  transform:translateX(-5px) translateY(150px);
 }
 
 .navbar button{
- width: 220px;
-height: 140px;
+ width: 200px;
+height: 110px;
 background-color: rgb(227, 227, 168);
-border-radius: 15px;
+border-radius: 50px;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-font-size: 28px;
+font-size: 38px;
 }
 
 
