--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ position: relative;
   justify-content: center;
   align-items: center;
   gap: 120px;
-  filter: drop-shadow(0px 0px 90px rgb(28, 14, 5));
+  filter: drop-shadow(0px 0px 2000px rgb(28, 14, 5));
   box-shadow: 0px 0px 90px rgb(20, 1, 1), 0px 0px 10px orange;
   transform:translateX(-5px) translateY(150px);
 }
@@ -398,6 +398,7 @@ background-color: rgb(227, 227, 168);
 border-radius: 50px;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 font-size: 38px;
+font-weight: 900;
 }
 
 
