--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,8 @@ function bttutupinfo(){
 
 function cartbt1(){
  
- let gambarmakanan1 = document.getElementById('gambarmakanan1');
+ let gambarmakanan1 = document.getElementById('gambarmakanan1')
+  let gambarfix = gambarmakanan1.getAttribute("src);
   let namamakanan1 = document.getElementById('namamakanan1');
   let hargamakan1 = document.getElementById('hargamakan1');
   let tutupbt = document.getElementById('infotutupyo');
@@ -1090,7 +1091,7 @@ function cartbt1(){
   const div = document.createElement('div');
   div.className="classcart";
   div.innerHTML = `
-  <img src="${gambarmakanan1.src}">
+  <img src="${gambarfix}">
  
   
   `
