--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ function bttutupinfo(){
 function cartbt1(){
  
  let gambarmakanan1 = document.getElementById('gambarmakanan1')
-  let gambarfix = gambarmakanan1.getAttribute("src);
+  let gambarfix = gambarmakanan1.getAttribute("src");
   let namamakanan1 = document.getElementById('namamakanan1');
   let hargamakan1 = document.getElementById('hargamakan1');
   let tutupbt = document.getElementById('infotutupyo');
