--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ background-color: black;
   
 
 <div class="pesanmenu">
-  <img id="gambarmakanan1" src="image/burger.jpg">
+  <img id="gambarmakanan1" src="https://raw.githubusercontent.com/ikhwaDEV1528/DIMSUM/main/burger.jpg">
   <button id="litaharga1" onclick="addMenu1()">Pesan</button>
   <button class="kurangi"onclick="min1()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
   <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
