--- a/index.html
+++ b/index.html
@@ -535,6 +535,12 @@ width: 50px;
   animation: ucapan 2s ease-out;
 }
 
+  . panelucapan button{
+    position : absolute;
+    transform:translateY(50px) 
+  }
+    
+
 @keyframes ucapan{
   from{
     transform: translateY(-140px) scale(0.5);
@@ -1053,6 +1059,7 @@ width: 50px;
 <!--UCAPAN-->
 <div class="panelucapan"  id="panelucapan">
   <h2 id="h2ucapan">HALO</h2>
+  <button onclick ="tutupucapan()">TUTUP</button>
 </div>
 
 <!--info cart-->
@@ -1114,6 +1121,13 @@ width: 50px;
 </div>
 
 <script>
+
+  function tutupucapan(){
+  let panelucapan = document.getElementById('panelucapan');
+    panelucapan.style.display="none"
+  
+  }
+  
 
 
 
