--- a/index.html
+++ b/index.html
@@ -535,9 +535,11 @@ width: 50px;
   animation: ucapan 2s ease-out;
 }
 
-  . panelucapan button{
+  .paneltombol{
     position : absolute;
     transform:translateY(50px) 
+    color:red;
+     background-color:white;
   }
     
 
@@ -1059,7 +1061,7 @@ width: 50px;
 <!--UCAPAN-->
 <div class="panelucapan"  id="panelucapan">
   <h2 id="h2ucapan">HALO</h2>
-  <button onclick ="tutupucapan()">TUTUP</button>
+  <button class="paneltombol" onclick ="tutupucapan()">TUTUP</button>
 </div>
 
 <!--info cart-->
