--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ width: 50px;
   animation: ucapan 2s ease-out;
 }
 
-  .paneltombol{
+  .tombolucapan{
     position : absolute;
     transform:translateY(50px) 
     color:red;
@@ -1061,7 +1061,9 @@ width: 50px;
 <!--UCAPAN-->
 <div class="panelucapan"  id="panelucapan">
   <h2 id="h2ucapan">HALO</h2>
-  <button class="paneltombol" onclick ="tutupucapan()">TUTUP</button>
+  <div class="tombolucapan>
+  <button  onclick ="tutupucapan()">TUTUP</button>
+  </div>
 </div>
 
 <!--info cart-->
