--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ width: 50px;
   align-items: center;
   border-radius: 20px;
   transform: translateY(-140px);
-  animation: ucapan 2s ease-out;
+
 }
 
 
@@ -1061,7 +1061,7 @@ width: 50px;
 <!--UCAPAN-->
 <div class="panelucapan"  id="panelucapan">
   <h2 id="h2ucapan">HALO</h2>
-  <button onclick="tutupucapan()">TUTP</button>
+  <button onclick="tutupucapan()">TUTUP</button>
 </div>
 
 <!--info cart-->
