--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     body{
       background-color:rgb(239, 239, 220);
       overflow-y:hiden;
+      animation:gerak 2s ease-out;
     }
 
+    @keyframes gerak{
+      from{
+       transform:scale(1.3) 
+        opacity:0.2;
+      }
+      to{
+       opacity:1;
+      }
+    }
     .imgUtama img{
       width: 400px;
       height: 400px;
