--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
   position: absolute;
   
   width: 1300px;
-  height: 420px;
+  height: 470px;
   top:1%;
   border-radius:40px;
   transform: translateY(-120px);
@@ -248,6 +248,21 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
 
 }
 
+
+
+.submitwacart{
+  background-color: green;
+  color:white;
+  width: 100px;
+  height: 50px;
+  border-radius:11px;
+  transform: translateX(150px)translateY(220px);
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  display: none;
+}
+
 .inputpaneltotal{
   display: flex;
   flex-direction: column;
@@ -257,13 +272,14 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
   gap: 10px;
   width: 400px;
   height: 200px;
-   
+  
 }
 
 .panelTotal input{
-  border-radius:30px;
+  border-radius:20px;
   height: 30px;
- 
+  padding: 10px;
+  transform: translateY(20px);
 }
 
 .submit{
@@ -271,7 +287,7 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
   background-color: green;
   color: white;
   border-radius: 10px;
-  transform: translateX(160px);
+  transform: translateX(160px) translateY(20px);
 }
 
 .buttontutupaddtotal{
@@ -280,12 +296,19 @@ left: 48%;
 position: absolute;
 border: 10px;
 padding: 5px;
+
 }
+
+
+
 
 .buttontutupaddtotal button{
   background-color:red ;
+  height: 40px;
+  width: 40px;
   color: white;
   border-radius: 10px;
+  transform: translateY(-455px) translateX(-630px);
 }
 
 .kurangi{
@@ -519,10 +542,23 @@ width: 50px;
 
 .submit1{
   display: none;
+  width: 100px;
+padding: 10px;
+background-color: green;
+color:white;
+border-radius: 10px;
+transform: translateY(230px) translateX(150px);
+
 }
 
 .tutupbuttonyaclass{
   display: none;
+  width: 90px;
+  height: 70px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  transform: translateY(30px) translateX(155px);
 }
 
 .jamwaktu{
@@ -1093,15 +1129,20 @@ width: 50px;
 
 
 <div id="paneltotalya"  class="panelTotal">
-
+<!--INPUT PANEL TOTAL TOTAL -->
 <div class="inputpaneltotal">
 <input id="nama" type="text"placeholder="masukan nama anda">
 <input id="alamat" type="text"placeholder="masukan Alamat anda">
 <input id="nomer" type="text" placeholder="masukan nomer telfon anda ">
 <button  id="submitt"  class="submit" onclick="submit()">add</button>
-<button id="submit1"  class="submit1" onclick="submit1()">wa</button>
-<button id="submitwacart" onclick="submitwacart()">PESAN WA</button>
-<button id="tutupbuttonya" class="tutupbuttonyaclass" onclick="tomboltutup()">TUTUP</button>
+<button id="submit1"  class="submit1" onclick="submit1()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+  <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+</svg>PESAN WA</button>
+<!--PESAN WA TOMBOL-->
+<button  class="submitwacart" id="submitwacart" onclick="submitwacart()"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="30" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+  <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+</svg> PESAN WA</button>
+<button id="tutupbuttonya" class="tutupbuttonyaclass" onclick="tomboltutup()">ENTER</button>
 
 </div>
 
@@ -1110,7 +1151,9 @@ width: 50px;
 </div>
 
 <div class="buttontutupaddtotal">
-  <button id="tutupyapanel" onclick="tutupAddTotal()">Tutup ya</button>
+  <button id="tutupyapanel" onclick="tutupAddTotal()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+  </svg></button>
 </div>
 </div>
 
@@ -1327,11 +1370,6 @@ pesancart.addEventListener("click" , function (){
 
 function tomboltutup(){
   
-  hitungDiskon()
-  
-  let hitungHasilDsikon = hargaDiskon * (getDiskoncart/100);
-  let hasilfix = hargaDiskon  - hitungHasilDsikon; 
-
    let nama = document.getElementById('nama').value;
    let alamat =document.getElementById('alamat').value;
    let nomer = document.getElementById('nomer').value;
@@ -1340,14 +1378,36 @@ function tomboltutup(){
   output.style.transform="translateY(300px)translateX(30px)"
  
 
-  if(getDiskoncart < 1){
-    output.innerHTML = `<p> HALO COSTUMER <span style="color:blue">${nama}</span> TOTAL HARGA ANDA RP.<span style="color:red">${hargaDiskon}.000</span> BELUM DAPAT DISKON NIH , BELANJA MIN 200k YA! , DAN TOTAL YANG DI BAYARKAN RP.<span style="color:red">${hasilfix}.000</span></p>`
-  
+
+
+
+  if(nama ===""  && alamat === ""  && nomer ===""){
+  alert("halo")
   }
 
-    else{
-      output.innerHTML = `halo costumer ${nama}  TOTAL HARGA ANDA RP.${hargaDiskon}.000 dan dapat diskon ${getDiskoncart}% dan total di bayarkan RP.${hasilfix}.000`
+  else if(getDiskoncart < 1){
+    
+  hitungDiskon()
   
+  let hitungHasilDsikon = hargaDiskon * (getDiskoncart/100);
+  let hasilfix = hargaDiskon  - hitungHasilDsikon; 
+
+    output.innerHTML = `<p> HALO COSTUMER <span style="color:blue">${nama}</span> TOTAL HARGA ANDA RP.<span style="color:red">${hargaDiskon}.000</span> BELUM DAPAT DISKON NIH , BELANJA MIN 200k YA! , DAN TOTAL YANG DI BAYARKAN RP.<span style="color:red">${hasilfix}.000</span></p>`
+  let submit1 = document.getElementById('submit1');
+  submit1.style.display="block"
+  }
+
+
+    else{
+      
+  hitungDiskon()
+  
+  let hitungHasilDsikon = hargaDiskon * (getDiskoncart/100);
+  let hasilfix = hargaDiskon  - hitungHasilDsikon; 
+
+      output.innerHTML = `halo costumer ${nama}  TOTAL HARGA ANDA RP.${hargaDiskon}.000 dan dapat diskon ${getDiskoncart}% dan total di bayarkan RP.${hasilfix}.000`
+  let submit1 = document.getElementById('submit1');
+  submit1.style.display="block"
     }
    paneltotalya.appendChild(output)
   }
@@ -1823,6 +1883,8 @@ function addTotal(){
     }
 
     else{
+      let tutupbuttonya = document.getElementById('tutupbuttonya');
+      tutupbuttonya.style.display="none"
       let paneltotalya = document.getElementById('paneltotalya');
       paneltotalya.style.display= "block";
       let submitt = document.getElementById('submitt');
