--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
   display: flex ;
   justify-content: center;
   flex-wrap: wrap;
-  display: block;
+  display: none;
   
 
 }
