--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ filter: drop-shadow(10px 5px 6px  rgb(56, 65, 57));
   display: flex ;
   justify-content: center;
   flex-wrap: wrap;
-  display: block;
+  display: none;
   
 
 }
@@ -463,7 +463,7 @@ font-weight: 900;
   width: 500px;
   transform: translateY(-120px);
 
-  display: block;
+  display: none;
   flex-direction: column;
   flex-wrap: wrap;
   overflow-y: auto;
@@ -1536,36 +1536,13 @@ btkurang.addEventListener("click", function(){
 
 
 // TOMBOL ADD PESAN//
-const pesancart = document.createElement('button');
-  
-pesancart.className="classpesancart"
-pesancart.style.transform="translateY(300px)"
-pesancart.innerHTML="PESAN"
-pesancart.style.display="block"
-
-
-pesancart.addEventListener("click" , function (){
-let tutupbuttonya = document.getElementById('tutupbuttonya');
-tutupbuttonya.style.display="block"
-  let divoren = document.getElementById('divoren')
-  divoren.style.display="none"
-
-  let tombolcart = document.getElementById('tutupbuttonya')
-  let submitt = document.getElementById('submitt');
-  submitt.style.display="none"
-  tombolcart.style.display="block"
-
-
-  let paneltotalya = document.getElementById('paneltotalya');
-  paneltotalya.style.display="block";
-  wadahpanelcart.style.display="none"
 
 
  
 
 
 
-})
+
  
 
 //-------///
