--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@ function cartbt2(notetotaluser1){
 
  
   
-  const div = document.createElement('div');
+  let div = document.createElement('div');
   div.className="classcart";
 
 
