--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ font-weight: 900;
   width: 500px;
   transform: translateY(-120px);
 
-  display: block;
+  display: none;
   flex-direction: column;
   flex-wrap: wrap;
   overflow-y: auto;
