--- a/index.html
+++ b/index.html
@@ -788,9 +788,8 @@ padding: 10px;
 
 
 <div class="indukpesanmenu">
-
-  <div id="wadahpanelcart" class="panelcart">
-
+  <div id="wadahpanelcart" class="panelcart"></div>
+</div>
   <button class="classaddpesancart" onclick="addpesancart()">PESAN</button>
   
 
