--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,7 @@ padding: 10px;
 
 </div>
 <div class="navbar">
-  <button id="halamanbt1" onclick="halaman1()">halaman1</button>
+  <button id="halamanbt1" onclick="halaman1()">introduction</button>
   <button id="halamanbt2" onclick="halaman2()">halaman2</button>
   <button id="halamanbt3" onclick="halaman3()">halaman3</button>
 </div>
@@ -1271,6 +1271,12 @@ padding: 10px;
 </div>
 
 <script>
+
+
+
+
+
+
 
 jumlah = 1;
 
@@ -1791,6 +1797,7 @@ function halaman1(){
   let halaman3 = document.getElementById('halamanbt3');
   halaman2.style.backgroundColor="rgb(227, 227, 168)"
    halaman3.style.backgroundColor="rgb(227, 227, 168)"
+   window.location.href="https://ikhwadev1528.github.io/webdev/"
 
 }
 
